fix div centering on mobile for ios

--- a/src/customCSS/RecentWork.css
+++ b/src/customCSS/RecentWork.css
@@ -129,6 +129,7 @@
   .RW {
     /* display: flex;
     flex-direction: row; */
+    display: block;
     background: rgb(212, 175, 55);
     color: black;
     font-size: 2.1rem;
